--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@laravel/vite-plugin-wayfinder": "^0.1.3",
+        "@types/leaflet": "^1.9.21",
+        "@types/locomotive-scroll": "^4.1.4",
         "@types/node": "^22.13.5",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
@@ -50,9 +52,12 @@
         "gsap": "^3.13.0",
         "input-otp": "^1.4.2",
         "laravel-vite-plugin": "^2.0",
+        "leaflet": "^1.9.4",
+        "locomotive-scroll": "^4.1.4",
         "lucide-react": "^0.475.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-leaflet": "^5.0.0",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
