--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "locomotive-scroll": "^4.1.4",
         "lucide-react": "^0.475.0",
         "react": "^19.0.0",
+        "react-day-picker": "^9.11.1",
         "react-dom": "^19.0.0",
         "react-leaflet": "^5.0.0",
         "tailwind-merge": "^3.0.1",
