--- a/package.json
+++ b/package.json
@@ -56,9 +56,10 @@
         "locomotive-scroll": "^4.1.4",
         "lucide-react": "^0.475.0",
         "react": "^19.0.0",
-        "react-day-picker": "^9.11.1",
+        "react-day-picker": "^9.12.0",
         "react-dom": "^19.0.0",
         "react-leaflet": "^5.0.0",
+        "react-zoom-pan-pinch": "^3.7.0",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
